--- a/index.html
+++ b/index.html
@@ -4,10 +4,119 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Discord</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+        <header>
+            <nav>
+                <div class="nav">
+                    <div class="nav-box logo">
+                        logo
+                    </div>
+
+                    <div class="nav-box link">
+                        link link link link link
+                    </div>
+
+                    <div class="nav-box login">
+                        login
+                    </div>
+
+                </div>
+
+            </nav>
+
+            <main>
+                <div class="header-main">
+                    <div class="content">
+
+                    </div>
+
+                </div>
+
+            </main>
+
+        </header>
+
+        <main>
+            <section class="container-flex">
+                <div class="content1">
+
+                </div>
+                <div class="content2">
+
+                </div>
+
+            </section>
+
+            <section class="container-flex gray">
+                <div class="content2">
+
+                </div>
+                <div class="content1">
+
+                </div>
+
+            </section>
+
+            <section class="container-flex">
+                <div class="content1">
+
+                </div>
+                <div class="content2">
+
+                </div>
+
+            </section>
+
+            <section class="container-flex gray"> 
+                
+                <div class="content3">
+
+                </div>
+
+            </section>
+
+        </main>
+
+        <footer>
+            <main class="container-flex section1">
+                <div class="special-section">
+
+                </div>
+
+                <div class="footer-section">
+
+                </div>
+                <div class="footer-section">
+
+                </div>
+                <div class="footer-section">
+
+                </div>
+                <div class="footer-section">
+
+                </div>
+
+
+            </main>
+
+            <footer class="section2">
+                <div class="container">
+                    <div class="info-footer">
+                        logo
+                    </div>
+
+                    <div class="info-footer">
+                        bottone
+                    </div>
+                </div>
+
+            </footer>
+
+        </footer>
         
     </body>
 </html>
